namespace QuinntyneBrownStewardship.Application.Administration.Curricula;

public sealed record PublicationResponse(string State, DateTimeOffset PublishedAt, int PublishedModuleCount);
