export type PublicationState = "Draft" | "Published";
